Issue #6 : Correction sur le filtre des users de la doc
